--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["elif", "helloscript", "himom", "inport", "mkdir", "zoomer"]
+  "cSpell.words": [
+    "elif",
+    "helloscript",
+    "himom",
+    "ibase",
+    "inport",
+    "mkdir",
+    "obase",
+    "zoomer"
+  ]
 }
